--- a/src/Parser/makefile
+++ b/src/Parser/makefile
@@ -6,11 +6,12 @@ JAVAC=javac
 JFLEX=jflex
 
 LEX=lexer.l
+CUP=/usr/share/java/cup.jar
 
 all: $(BUILD_DIR)/Lexer.class
 
 $(BUILD_DIR)/%.class: $(SCANNER)/%.java
-	$(JAVAC) -cp $(SCANNER) $^ -d $(BUILD_DIR)
+	$(JAVAC) -cp "$(SCANNER):$(CUP)" $^ -d $(BUILD_DIR)
 
 $(SCANNER)/Lexer.java: $(SCANNER)/$(LEX)
 	$(JFLEX) $(SCANNER)/$(LEX)
