updated makefile to compile correct dependencies

--- a/compose.yaml
+++ b/compose.yaml
@@ -8,3 +8,4 @@ services:
     volumes:
       - ./src/Parser/build:/app/build
       - ./src/Parser/Scanner:/app/Scanner
+      - ./src/Parser/Parse:/app/Parse
