updated makefile and also added a better gitignore

--- a/src/Parser/makefile
+++ b/src/Parser/makefile
@@ -1,6 +1,7 @@
 BUILD_DIR=Build
 PARSE_DIR=Parse
 SCANNER_DIR=Scanner
+AST_DIR=Ast
 
 CUP=cup
 CUP_CLASSPATH=/usr/share/java/cup.jar
@@ -14,6 +15,7 @@ all: Project
 
 Project: Parser Scanner
 	$(JAVAC) -cp "$(CUP_CLASSPATH):$(PARSE_DIR):$(SCANNER_DIR)" $(SCANNER_DIR)/Scanner.java -d $(BUILD_DIR)
+	$(JAVAC) -cp "$(CUP_CLASSPATH):$(PARSE_DIR):$(SCANNER_DIR):$(AST_DIR)" $(PARSE_DIR)/ParserMain.java -d $(BUILD_DIR)
 
 Parser: $(PAR_FILE)
 	$(CUP) -parser Parser -symbols Sym -expect 3 $(PAR_FILE)
