--- a/src/Parser/makefile
+++ b/src/Parser/makefile
@@ -13,19 +13,17 @@ PAR_FILE=$(PARSE_DIR)/parser.l
 SCANNER_FILES=$(wildcard $(SCANNER_DIR)/*.java)
 PARSER_FILES=$(wildcard $(PARSE_DIR)/*.java)
 
-all: Project
+all: $(BUILD_DIR)/ParserMain.class $(BUILD_DIR)/Scanner.class
 
-Project: Parser Scanner
-	$(JAVAC) -cp "$(CUP_CLASSPATH):$(PARSE_DIR):$(SCANNER_DIR)" $(SCANNER_DIR)/Scanner.java -d $(BUILD_DIR)
-	$(JAVAC) -cp "$(CUP_CLASSPATH):$(PARSE_DIR):$(SCANNER_DIR):$(AST_DIR)" $(PARSE_DIR)/ParserMain.java -d $(BUILD_DIR)
-
-Parser: $(PAR_FILE) $(PARSER_FILES)
+$(BUILD_DIR)/ParserMain.class: $(PARSE_DIR)/*.java $(PAR_FILE)
 	$(CUP) -parser Parser -symbols Sym -expect 3 $(PAR_FILE)
 	mv Parser.java $(PARSE_DIR)/Parser.java
 	mv Sym.java $(PARSE_DIR)/Sym.java
+	$(JAVAC) -cp "$(CUP_CLASSPATH):$(PARSE_DIR):$(SCANNER_DIR):$(AST_DIR)" $(PARSE_DIR)/ParserMain.java -d $(BUILD_DIR)
 
-Scanner: $(LEX_FILE) $(SCANNER_FILES)
+$(BUILD_DIR)/Scanner.class: $(SCANNER_DIR)/*.java $(LEX_FILE)
 	$(JFLEX) $(LEX_FILE)
+	$(JAVAC) -cp "$(CUP_CLASSPATH):$(PARSE_DIR):$(SCANNER_DIR)" $(SCANNER_DIR)/Scanner.java -d $(BUILD_DIR)
 
 clean: 
 	rm -rf $(BUILD_DIR)/* *.class *.java
