--- a/compose.yaml
+++ b/compose.yaml
@@ -9,3 +9,4 @@ services:
       - ./src/Parser/Build:/app/Build
       - ./src/Parser/Scanner:/app/Scanner
       - ./src/Parser/Parse:/app/Parse
+      - ./src/Parser/tests:/app/tests
