trying to implement own changes

--- a/compose.yaml
+++ b/compose.yaml
@@ -10,3 +10,4 @@ services:
       - ./src/Parser/Scanner:/app/Scanner
       - ./src/Parser/Parse:/app/Parse
       - ./src/Parser/tests:/app/tests
+      - ./src/Parser/Ast/:/app/Ast
