added some makefile / running stuff for main compiler file

--- a/src/Parser/makefile
+++ b/src/Parser/makefile
@@ -2,6 +2,7 @@ BUILD_DIR=Build
 PARSE_DIR=Parse
 SCANNER_DIR=Scanner
 AST_DIR=Ast
+SYM_DIR=Symbol
 
 CUP=cup
 CUP_CLASSPATH=/usr/share/java/cup.jar
@@ -20,6 +21,12 @@ $(BUILD_DIR)/ParserMain.class: $(PARSE_DIR)/*.java $(PAR_FILE) $(AST_DIR)/Ast/*.
 	mv Parser.java $(PARSE_DIR)/Parser.java
 	mv Sym.java $(PARSE_DIR)/Sym.java
 	$(JAVAC) -cp "$(CUP_CLASSPATH):$(PARSE_DIR):$(SCANNER_DIR):$(AST_DIR)" $(PARSE_DIR)/ParserMain.java -d $(BUILD_DIR)
+
+$(BUILD_DIR)/CM.class: $(PARSE_DIR)/*.java $(PAR_FILE) $(AST_DIR)/Ast/*.java $(SYM_DIR)/*.java
+	$(CUP) -parser Parser -symbols Sym -expect 3 $(PAR_FILE)
+	mv Parser.java $(PARSE_DIR)/Parser.java
+	mv Sym.java $(PARSE_DIR)/Sym.java
+	$(JAVAC) -cp "$(CUP_CLASSPATH):$(PARSE_DIR):$(SCANNER_DIR):$(AST_DIR):$(SYM_DIR)" CM.java -d $(BUILD_DIR)
 
 $(BUILD_DIR)/Scanner.class: $(SCANNER_DIR)/*.java $(LEX_FILE)
 	$(JFLEX) $(LEX_FILE)
