Updated the makefile

--- a/src/Parser/makefile
+++ b/src/Parser/makefile
@@ -25,7 +25,7 @@ $(BUILD_DIR)/ParserMain.class: $(PARSE_DIR)/*.java $(PAR_FILE) $(AST_DIR)/Ast/*.
 	$(JAVAC) -cp "$(CUP_CLASSPATH):$(PARSE_DIR):$(SCANNER_DIR):$(AST_DIR)" $(PARSE_DIR)/ParserMain.java -d $(BUILD_DIR)
 
 $(BUILD_DIR)/CM.class: $(SYM_DIR)/*.java
-	$(JAVAC) -cp "$(CUP_CLASSPATH):$(SYM_DIR):$(PARSE_DIR):$(SCANNER_DIR):$(AST_DIR)" $(SYM_DIR)/CM.java -d $(BUILD_DIR)
+	$(JAVAC) -cp "$(CUP_CLASSPATH):$(SYM_DIR):$(PARSE_DIR):$(SCANNER_DIR):$(AST_DIR):$(CODE_DIR)" $(SYM_DIR)/CM.java -d $(BUILD_DIR)
 
 $(BUILD_DIR)/CodeGen.class: $(CODE_DIR)/*.java
 	$(JAVAC) -cp "$(CUP_CLASSPATH):$(PARSE_DIR):$(SCANNER_DIR):$(AST_DIR):$(CODE_DIR)" $(CODE_DIR)/CodeGen.java -d $(BUILD_DIR)
