Updated makefile and Block

--- a/src/Parser/makefile
+++ b/src/Parser/makefile
@@ -28,7 +28,7 @@ $(BUILD_DIR)/CM.class: $(SYM_DIR)/*.java
 	$(JAVAC) -cp "$(CUP_CLASSPATH):$(SYM_DIR):$(PARSE_DIR):$(SCANNER_DIR):$(AST_DIR):$(CODE_DIR)" $(SYM_DIR)/CM.java -d $(BUILD_DIR)
 
 $(BUILD_DIR)/CodeGen.class: $(CODE_DIR)/*.java
-	$(JAVAC) -cp "$(CUP_CLASSPATH):$(PARSE_DIR):$(SCANNER_DIR):$(AST_DIR):$(CODE_DIR)" $(CODE_DIR)/CodeGen.java -d $(BUILD_DIR)
+	$(JAVAC) -cp "$(CUP_CLASSPATH):$(PARSE_DIR):$(SCANNER_DIR):$(AST_DIR):$(CODE_DIR):$(SYM_DIR)" $(CODE_DIR)/CodeGen.java -d $(BUILD_DIR)
 
 $(BUILD_DIR)/Scanner.class: $(SCANNER_DIR)/*.java $(LEX_FILE)
 	$(JFLEX) $(LEX_FILE)
