--- a/compose.yaml
+++ b/compose.yaml
@@ -10,14 +10,16 @@ services:
       - ./src/Parser/Scanner:/app/Scanner
       - ./src/Parser/Parse:/app/Parse
       - ./src/Parser/tests:/app/tests
-      - ./src/Parser/Ast/:/app/Ast
-      - ./src/Parser/Symbol/:/app/Symbol
-      - ./src/Parser/Code/:/app/Code
+      - ./src/Parser/Ast:/app/Ast
+      - ./src/Parser/Symbol:/app/Symbol
+      - ./src/Parser/Code:/app/Code
+      - ./src/Parser/Programs:/app/Programs
 
   assembly: # Simulator
     image: socsguelph/socslinux:latest
     volumes:
       - ./src/Assembly:/app
+      - ./src/Parser/Programs:/app/Programs
     command: "bash"
     stdin_open: true
     tty: true
